# M3CV

./: .gitignore  CLAUDE.md  Makefile  README.md  TESTING_QUICK_START.md  main.py  pyproject.toml
_legacy/m3cv/: ConfigHandler.py  _coreutils.py
_legacy/m3cv/dl/evaluation/: reports.py
_legacy/m3cv/dl/io/: DataLoading.py  _datautils.py  _utils.py
_legacy/m3cv/dl/preprocessing/: data_augmentation.py
_legacy/m3cv/models/: Resnet.py  ViT.py  __init__.py  losses.py  unet.py
_legacy/templates/: config_test.yaml
scripts/: README.md  pack_test_data.py  setup_e2e_test_data.py  test_anatomical_cropping.py
src/m3cv/: ConfigHandler.py  _coreutils.py
src/m3cv/data/: _preprocess_util.py  data_augmentation.py  main.py
src/m3cv/dataprep/: _preprocess_util.py  main.py
src/m3cv/dl/: main.py
src/m3cv/dl/evaluation/: reports.py
src/m3cv/dl/io/: DataLoading.py  __init__.py  _datautils.py  _utils.py
src/m3cv/dl/preprocessing/: data_augmentation.py
src/m3cv/models/: Resnet.py  ViT.py  __init__.py  losses.py  unet.py
src/m3cv/pipeline/: main.py
src/m3cv/pipeline/evaluation/: reports.py
src/m3cv/pipeline/io/: DataLoader.py  DataLoading.py  __init__.py  _datautils.py
src/m3cv/pipeline/preprocessing/: data_augmentation.py
templates/: config_ROI_segmentation.yaml  config_outcome_prediction.yaml  config_test.yaml
