[project]
name = "m3cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.15.1",
    "keras>=3.11.3",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pydicom>=3.0.1",
    "tensorflow>=2.20.0",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.uv.workspace]
members = [
    "packages/m3cv-dataprep",
    "packages/m3cv-data",
    "packages/m3cv-models",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["packages/*/src"]
exclude = [
    "_legacy",                                     # Legacy code, reference only
    "packages/m3cv-dataprep/src/m3cv_prep/nonvolume_logic_reference",  # Reference only
    "_oldfiles",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["m3cv", "m3cv_prep", "m3cv_data", "m3cv_models"]
